--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
+{% load staticfiles %}
+
 <html>
-    <head><title>Rango</title></head>
+    <head>
+        <title>Rango</title>
+    </head>
     <body>
         <h1>Rango says...</h1>
-        <div>hello world!</div>
-        <img src="/static/images/rango.jpg" alt="Picture of Rango" />
+        <div>
+            hey there {{ boldmessage }}
+        </div>
+        
+        <h2>Most Liked Categories</h2>
+        <div>
+            {% if categories %}
+                <ul>
+                    {% for category in categories %}
+                        <li>{{ category.name }}</li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <strong>There are no categories present.</strong>
+            {% endif %}
+        </div>
+
+        <div>
+            <a href="/rango/about/">About</a><br />
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+        </div>
     </body>
 </html>
