Chapters 4 & 7: Completed About template and linked to Index

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -16,7 +16,11 @@
             {% if categories %}
                 <ul>
                     {% for category in categories %}
-                        <li>{{ category.name }}</li>
+                        <li>
+                            <a href="{% url 'rango:show_category' category.slug %}">
+                                {{ category.name }}
+                            </a>
+                        </li>
                     {% endfor %}
                 </ul>
             {% else %}
