Chapter 8: Fully implemented Add Page with redirect fix

--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -16,6 +16,11 @@
                 {% else %}
                     <strong>No pages currently in category.</strong>
                 {% endif %}
+
+                {% if category %}
+                    <a href="{% url 'rango:add_page' category.slug %}">Add Page</a><br />
+                {% endif %}
+
             {% else %}
                 The specified category does not exist.
             {% endif %}
