--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -32,5 +32,7 @@
             <a href="/rango/about/">About</a><br />
             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
         </div>
+        
+        <a href="{% url 'rango:add_category' %}">Add a New Category</a>
     </body>
 </html>
