--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,19 +1,16 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
-        <h1>About Rango</h1>
-        <div>
-            This is the about page. Rango says hello!
-        </div>
+{% block title_block %}
+    About
+{% endblock %}
 
-        <div>
-            <a href="{% url 'rango:index' %}">Return to the index</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-        </div>
-    </body>
-</html>
+{% block body_block %}
+    <h1>About Rango</h1>
+    <div>
+        This is the about page. Rango says hello!
+    </div>
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+    </div>
+{% endblock %}
