--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,29 +1,24 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
-        <div>
-            {% if category %}
-                <h1>{{ category.name }}</h1>
-                {% if pages %}
-                    <ul>
-                        {% for page in pages %}
-                        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                        {% endfor %}
-                    </ul>
-                {% else %}
-                    <strong>No pages currently in category.</strong>
-                {% endif %}
+{% extends 'rango/base.html' %}
 
-                {% if category %}
-                    <a href="{% url 'rango:add_page' category.slug %}">Add Page</a><br />
-                {% endif %}
+{% block title_block %}
+    {% if category %}{{ category.name }}{% else %}Unknown Category{% endif %}
+{% endblock %}
 
-            {% else %}
-                The specified category does not exist.
-            {% endif %}
-        </div>
-    </body>
-</html>
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+        {% if pages %}
+            <ul>
+                {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>No pages currently in category.</strong>
+        {% endif %}
+
+        <a href="{% url 'rango:add_page' category.slug %}">Add Page</a>
+    {% else %}
+        The specified category does not exist.
+    {% endif %}
+{% endblock %}
