--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,38 +1,34 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
-        <h1>Rango says...</h1>
-        <div>
-            hey there {{ boldmessage }}
-        </div>
-        
-        <h2>Most Liked Categories</h2>
-        <div>
-            {% if categories %}
-                <ul>
-                    {% for category in categories %}
-                        <li>
-                            <a href="{% url 'rango:show_category' category.slug %}">
-                                {{ category.name }}
-                            </a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            {% else %}
-                <strong>There are no categories present.</strong>
-            {% endif %}
-        </div>
+{% block title_block %}
+    Homepage
+{% endblock %}
 
-        <div>
-            <a href="/rango/about/">About</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-        </div>
-        
-        <a href="{% url 'rango:add_category' %}">Add a New Category</a>
-    </body>
-</html>
+{% block body_block %}
+    <h1>Rango says...</h1>
+    <div>
+        hey there {{ boldmessage }}
+    </div>
+
+    <h2>Most Liked Categories</h2>
+    <div>
+        {% if categories %}
+            <ul>
+                {% for category in categories %}
+                    <li>
+                        <a href="{% url 'rango:show_category' category.slug %}">
+                            {{ category.name }}
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
+    </div>
+
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+    </div>
+{% endblock %}
