--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -3,6 +3,7 @@
 
 <html>
 <head>
+    <meta charset="utf-8">
     <title>
         Rango - {% block title_block %}How to Tango with Django!{% endblock %}
     </title>
@@ -12,12 +13,21 @@
         {% block body_block %}
         {% endblock %}
     </div>
+
     <hr />
+
     <div>
         <ul>
-            <li><a href="{% url 'rango:add_category' %}">Add New Category</a></li>
-            <li><a href="{% url 'rango:about' %}">About</a></li>
             <li><a href="{% url 'rango:index' %}">Home</a></li>
+            <li><a href="{% url 'rango:about' %}">About</a></li>
+
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+                <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+            {% else %}
+                <li><a href="{% url 'rango:register' %}">Register Here</a></li>
+                <li><a href="{% url 'rango:login' %}">Login</a></li>
+            {% endif %}
         </ul>
     </div>
 </body>
