--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -22,6 +22,7 @@
             <li><a href="{% url 'rango:about' %}">About</a></li>
 
             {% if user.is_authenticated %}
+                <li><a href="{% url 'rango:restricted' %}">Restricted Page</a></li>
                 <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
                 <li><a href="{% url 'rango:logout' %}">Logout</a></li>
             {% else %}
