--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -7,17 +7,26 @@
 {% block body_block %}
     {% if category %}
         <h1>{{ category.name }}</h1>
+        
         {% if pages %}
             <ul>
                 {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                <li>
+                    <a href="{% url 'rango:goto' %}?page_id={{ page.id }}">
+                        {{ page.title }}
+                    </a> 
+                    ({{ page.views }} views)
+                </li>
                 {% endfor %}
             </ul>
         {% else %}
             <strong>No pages currently in category.</strong>
         {% endif %}
 
-        <a href="{% url 'rango:add_page' category.slug %}">Add Page</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'rango:add_page' category.slug %}">Add Page</a>
+        {% endif %}
+
     {% else %}
         The specified category does not exist.
     {% endif %}
